# leafwing_input_playback

./: Cargo.toml  README.md  RELEASES.md  git
.github/workflows/: ci.yml
data/: app_exit.ron  hello_world.ron
examples/: basic_input_mocking.rs  gamepad.rs  gamepad_input_mocking.rs  input_capture.rs  input_playback.rs  mocking_window_events.rs  playback_serialized_input.rs  serialize_captured_input.rs  useless_machine.rs
main_thread_tests/: cursor_moved.rs
src/: axislike.rs  capture.rs  frame_counting.rs  input_capture.rs  input_mocking.rs  input_playback.rs  lib.rs  orientation.rs  playback.rs  playback_data.rs  runners.rs  serde.rs  timestamped_input.rs  unified_input.rs  user_input.rs
tests/: input_capture.rs  input_playback.rs
