[package]
name = "leafwing_input_playback"
description = "Input recording and mocking functionality for the Bevy game engine."
version = "0.3.0"
authors = ["Leafwing Studios"]
homepage = "https://leafwing-studios.com/"
repository = "https://github.com/leafwing-studios/leafwing_input_playback"
license = "MIT OR Apache-2.0"
edition = "2021"
categories = ["games", "game-development"]
keywords = ["bevy", "input"]
exclude = ["assets/**/*", "tools/**/*", ".github/**/*"]

[profile.dev]
opt-level = 3

[workspace]
members = ["./", "tools/ci"]

[features]
default = []

[dependencies]
bevy = {git = "https://github.com/alice-i-cecile/bevy", branch="0.8.1withInputSerde", default_features = false, features = ["serialize"]}
serde = {version = "1.0", features = ["derive"]}

[dev-dependencies]
bevy = {git = "https://github.com/alice-i-cecile/bevy", branch="0.8.1withInputSerde", default-features = true, features = ["serialize"]}

[lib]
name = "leafwing_input_playback"
path = "src/lib.rs"
