[package]
name = "leafwing_input_playback"
description = "Input recording and mocking functionality for the Bevy game engine."
version = "0.5.0"
authors = ["Leafwing Studios"]
homepage = "https://leafwing-studios.com/"
repository = "https://github.com/leafwing-studios/leafwing_input_playback"
license = "MIT OR Apache-2.0"
edition = "2021"
categories = ["games", "game-development"]
keywords = ["bevy", "input"]
exclude = ["assets/**/*", "tools/**/*", ".github/**/*"]

[profile.dev]
opt-level = 3

[workspace]
members = ["./", "tools/ci"]

[features]
default = []

[dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "bevy_window",
    "serialize",
] }
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"

[dev-dependencies]
bevy = { version = "0.15", default-features = true }
smol_str = "0.2"

[lib]
name = "leafwing_input_playback"
path = "src/lib.rs"
